# hyperuniform2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hyperuniform.pgm  params.in
include/: annealing.hpp  config.hpp  constants.hpp  fourier.hpp  io.hpp  parametros.hpp  thread_pool.hpp
scripts/: test_hyper2D.py
src/: annealing.cpp  config.cpp  fourier.cpp  io.cpp  main.cpp  parametros.cpp  thread_pool.cpp
